// TODO: Show a link to were this proto was downloaded from
syntax = "proto3";

package fonoster.routr.resources.v2draft1;

import "google/protobuf/struct.proto";

// Resources service
service Resources {
  rpc Create (CreateRequest) returns (Resource) {}
  rpc Update (UpdateRequest) returns (Resource) {}
  rpc Get (GetRequest) returns (Resource) {}
  rpc Delete (DeleteRequest) returns (Empty) {}
  rpc List (ListRequest) returns (ListResponse) {}
  rpc FindBy (FindByRequest) returns (FindByResponse) {}
}

message Metadata {
  string ref = 1;
  // The resource's name
  string name = 2;
  // Link to dependencies of this resource
  repeated string depends_on = 3;
  // Created at
  int32 create_time = 4;
  // Updated at
  int32 update_time = 5;
}

message Resource {
  // The resource's api version
  string apiVersion = 1;
  // The resource's kind
  string kind = 2;
  // The resource's metadata
  Metadata metadata = 3;
  // The resource's data
  .google.protobuf.Struct spec = 4;
}

message CreateRequest  {
  Metadata metadata = 1;
  .google.protobuf.Struct spec = 2;
}

message UpdateRequest  {
  Metadata metadata = 1;
  .google.protobuf.Struct spec = 2;
}

message DeleteRequest  {
  string ref = 1;
}

message GetRequest  {
  string ref = 1;
}

message ListRequest {
  // The maximum number of items in the list
  int32 page_size = 1;

  // The next_page_token value returned from the previous request, if any
  string page_token = 2;

  // The filter to apply to the list
  string filter = 3;

  // The type of resource to list
  string kind = 4;

  // Level of detail of the individual entities (reserved)
  View view = 5;
}

message ListResponse {
  // List of Resources
  repeated Resource resources = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list
  string next_page_token = 2;
}

message FindByRequest {
  // The type of resource to find
  string kind = 1;

  // Search criteria for the request
  string criteria = 2;

  // Parameters to apply in combination with the search criteria
  .google.protobuf.Struct parameters = 3; 

  // Level of detail of the individual entities (reserved)
  View view = 4;
}

message FindByResponse {
  // List of Resources
  repeated Resource resources = 1;
}

enum View {
  BASIC = 0;
  STANDARD = 1;
  FULL = 2;
}

message Empty {}
